# WinAPICommon

./: .gitignore  .gitmodules  Builder.bat  CMakeLists.txt  README.md  WinAPICommon.code-workspace
KeySenderSample/: CMakeLists.txt
MsgBoxSample/: CMakeLists.txt  WinMain.cpp
MsgBoxSample/Resource/: MsgBoxSampleData.rc
RegistererSample/: CMakeLists.txt
Samples/KeySenderSample/: CMakeLists.txt  WinMain.cpp
Samples/RegistererSample/: CMakeLists.txt  WinMain.cpp
src/: Concepts.hpp  Concepts.inl  EventLogType.hpp  FileSystem.cpp  FileSystem.hpp  FileSystem.inl  IModule.hpp  IsNotNullTerminator.hpp  IsNotNullTerminator.inl  Iterator.hpp  Key.hpp  KeySender.cpp  KeySender.hpp  Log.cpp  Log.hpp  Log.inl  Module.hpp  Module.inl  Path.hpp  Path.inl  Precompiled.hpp  Ranges.hpp  Ranges.inl  Registry.cpp  Registry.hpp  RegistryKey.cpp  RegistryKey.hpp  RegistryKey.inl  RegistryKeyType.hpp  RegistryStringType.hpp  RegistryValueType.hpp  String.cpp  String.hpp  String.inl  StringCommon.cpp  StringCommon.hpp  StringCommon.inl  StringCounter.hpp  StringCounter.inl  StringLiteral.hpp  (+17 more)
